# NativeCpp

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lijiahao/nativecpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/CppDemo/: CMakeLists.txt  HelloWorldDemo.cpp  HelloWorldDemo.h
app/src/main/cpp/Utils/: CMakeLists.txt  LogUtils.cpp  LogUtils.h
app/src/main/java/com/lijiahao/nativecpp/: MainActivity.java  MyApplication.java  NativeCppLibrary.java
app/src/main/java/com/lijiahao/nativecpp/utils/: GetPermissionFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lijiahao/nativecpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
